--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@date-io/dayjs": "^2.17.0",
     "@mdi/font": "7.0.96",
+    "accounting": "^0.4.1",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "moment": "^2.29.4",
